# fsearch

./: .gitignore  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  config.toml  fsearch.toml.example
.github/workflows/: ci.yml  release.yml
src/: binary.rs  cli.rs  colors.rs  config.rs  error.rs  main.rs  output.rs  searcher.rs
