[package]
name        = "fast-search"
version     = "1.0.1"
edition     = "2021"
rust-version = "1.75"
authors     = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "⚡ A blazingly fast, cross-platform CLI tool for searching files and file contents"
license     = "MIT"
homepage    = "https://github.com/cumulus13/fsearch"
repository  = "https://github.com/cumulus13/fsearch"
documentation = "https://docs.rs/fast-search"
readme      = "README.md"
keywords    = ["search", "find", "grep", "cli", "files"]
categories  = ["command-line-utilities", "filesystem"]
exclude     = [".github", "*.log"]

[[bin]]
name = "fsearch"
path = "src/main.rs"

[dependencies]
clap      = { version = "4.0", features = ["derive", "color"] }
colored   = "=2.1.0"
walkdir   = "=2.4.0"
anyhow    = "=1.0.79"
thiserror = "=1.0.56"
serde     = { version = "=1.0.196", features = ["derive"] }
toml      = "=0.8.8"
dirs      = "=5.0.1"
regex     = "=1.10.3"
rayon     = "=1.8.1"
once_cell = "=1.19.0"
ctrlc     = "=3.4.2"
glob      = "=0.3.1"
indexmap  = "=2.2.6"
clap-version-flag = "1.0.7"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
